# NearField_22x7_rational_communication

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
docs/: ARCHITECTURE.md  HARDWARE_SETUP.md  OS_SETUP.md  TESTING.md
scripts/: cross-build.sh  setup.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/display/: ascii.rs  backend.rs  eink.rs  mod.rs  noop.rs  pipe.rs  stdout.rs
src/nfc/: commands.rs  frame.rs  mod.rs  pn532.rs  tag.rs  transport.rs
src/pipeline/: mod.rs  shutdown.rs
src/storage/: db.rs  mod.rs  models.rs
